--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
-								<a class="nav-item nav-link" href="index.html">Home</a>
-								<a class="nav-item nav-link" href="collection.html">Collection</a>
-								<a class="nav-item nav-link" href="shoes.html">Shoes</a>
+								<a class="nav-item nav-link" href="index.html">Trang chủ</a>
+								<a class="nav-item nav-link" href="collection.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="contact.html">Contact</a>
+								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
 								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"></a>
 								<a class="nav-item nav-link last" href="contact.html"><img
 										src="images/shop_icon.png"></a>
@@ -85,19 +85,19 @@
 								<div class="carousel-item active">
 									<div class="row">
 										<div class="col-sm-2 padding_0">
-											<p class="mens_taital">Men Shoes</p>
+											<p class="mens_taital">Giày nam</p>
 											<div class="page_no">0/2</div>
-											<p class="mens_taital_2">Men Shoes</p>
+											<p class="mens_taital_2">Giày nam</p>
 										</div>
 										<div class="col-sm-5">
 											<div class="banner_taital">
-												<h1 class="banner_text">New Running Shoes </h1>
+												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
 												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
 													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 												</p>
-												<button class="buy_bt">Buy Now</button>
-												<button class="more_bt">See More</button>
+												<button class="buy_bt">Mua ngay</button>
+												<button class="more_bt">Xem thêm</button>
 											</div>
 										</div>
 										<div class="col-sm-5">
@@ -108,19 +108,19 @@
 								<div class="carousel-item">
 									<div class="row">
 										<div class="col-sm-2 padding_0">
-											<p class="mens_taital">Men Shoes</p>
+											<p class="mens_taital">Giày nam</p>
 											<div class="page_no">0/2</div>
-											<p class="mens_taital_2">Men Shoes</p>
+											<p class="mens_taital_2">Giày nam</p>
 										</div>
 										<div class="col-sm-5">
 											<div class="banner_taital">
-												<h1 class="banner_text">New Running Shoes </h1>
+												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
 												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
 													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 												</p>
-												<button class="buy_bt">Buy Now</button>
-												<button class="more_bt">See More</button>
+												<button class="buy_bt">Mua ngay</button>
+												<button class="more_bt">Xem thêm</button>
 											</div>
 										</div>
 										<div class="col-sm-5">
@@ -131,19 +131,19 @@
 								<div class="carousel-item">
 									<div class="row">
 										<div class="col-sm-2 padding_0">
-											<p class="mens_taital">Men Shoes</p>
+											<p class="mens_taital">Giày nam</p>
 											<div class="page_no">0/2</div>
-											<p class="mens_taital_2">Men Shoes</p>
+											<p class="mens_taital_2">Giày nam</p>
 										</div>
 										<div class="col-sm-5">
 											<div class="banner_taital">
-												<h1 class="banner_text">New Running Shoes </h1>
+												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
 												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
 													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 												</p>
-												<button class="buy_bt">Buy Now</button>
-												<button class="more_bt">See More</button>
+												<button class="buy_bt">Mua ngay</button>
+												<button class="more_bt">Xem thêm</button>
 											</div>
 										</div>
 										<div class="col-sm-5">
@@ -154,19 +154,19 @@
 								<div class="carousel-item">
 									<div class="row">
 										<div class="col-sm-2 padding_0">
-											<p class="mens_taital">Men Shoes</p>
+											<p class="mens_taital">Giày nam</p>
 											<div class="page_no">0/2</div>
-											<p class="mens_taital_2">Men Shoes</p>
+											<p class="mens_taital_2">Giày nam</p>
 										</div>
 										<div class="col-sm-5">
 											<div class="banner_taital">
-												<h1 class="banner_text">New Running Shoes </h1>
+												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
 												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
 													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 												</p>
-												<button class="buy_bt">Buy Now</button>
-												<button class="more_bt">See More</button>
+												<button class="buy_bt">Mua ngay</button>
+												<button class="more_bt">Xem thêm</button>
 											</div>
 										</div>
 										<div class="col-sm-5">
@@ -185,7 +185,7 @@
 	<!-- new collection section start -->
 	<div class="layout_padding collection_section">
 		<div class="container">
-			<h1 class="new_text"><strong>New Collection</strong></h1>
+			<h1 class="new_text"><strong>Sản phẩm mới</strong></h1>
 			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 			<div class="collection_section_2">
@@ -206,7 +206,7 @@
 								</ul>
 							</div>
 						</div>
-						<button class="seemore_bt">See More</button>
+						<button class="seemore_bt">Xem thêm</button>
 					</div>
 					<div class="col-md-6">
 						<div class="about-img2">
@@ -230,7 +230,7 @@
 	</div>
 	<div class="collection_section">
 		<div class="container">
-			<h1 class="new_text"><strong>Racing Boots</strong></h1>
+			<h1 class="new_text"><strong>Giày chạy đua</strong></h1>
 			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 		</div>
@@ -254,7 +254,7 @@
 	</div>
 	<div class="collection_section layout_padding">
 		<div class="container">
-			<h1 class="new_text"><strong>New Arrivals Products</strong></h1>
+			<h1 class="new_text"><strong>Sản phẩm mới về</strong></h1>
 			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 		</div>
@@ -266,7 +266,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Best Shoes </p>
+						<p class="best_text">Giày bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img4.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -286,7 +286,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Best Shoes </p>
+						<p class="best_text">Giày bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img5.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -306,7 +306,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Best Shoes </p>
+						<p class="best_text">Giày bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img6.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -328,7 +328,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Sports Shoes</p>
+						<p class="best_text">Giày thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img7.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -348,7 +348,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Sports Shoes</p>
+						<p class="best_text">Giày thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img8.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -368,7 +368,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Sports Shoes</p>
+						<p class="best_text">Giày thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img9.png"></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -388,7 +388,7 @@
 				</div>
 			</div>
 			<div class="buy_now_bt">
-				<button class="buy_text">Buy Now</button>
+				<button class="buy_text">Mua ngay</button>
 			</div>
 		</div>
 	</div>
@@ -396,7 +396,7 @@
 	<!-- contact section start -->
 	<div class="layout_padding contact_section">
 		<div class="container">
-			<h1 class="new_text"><strong>Contact Now</strong></h1>
+			<h1 class="new_text"><strong>Liên hệ ngay</strong></h1>
 		</div>
 		<div class="container-fluid ram">
 			<div class="row">
@@ -406,23 +406,23 @@
 							<div class="container">
 								<form action="/action_page.php">
 									<div class="form-group">
-										<input type="text" class="email-bt" placeholder="Name" name="Name">
+										<input type="text" class="email-bt" placeholder="Họ và tên" name="Name">
 									</div>
 									<div class="form-group">
-										<input type="text" class="email-bt" placeholder="Phone Numbar" name="Name">
+										<input type="text" class="email-bt" placeholder="Số điện thoại" name="Name">
 									</div>
 									<div class="form-group">
 										<input type="text" class="email-bt" placeholder="Email" name="Email">
 									</div>
 
 									<div class="form-group">
-										<textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
+										<textarea class="massage-bt" placeholder="Lời nhắn" rows="5" id="comment"
 											name="Massage"></textarea>
 									</div>
 								</form>
 							</div>
 							<div class="send_btn">
-								<button class="main_bt">Send</button>
+								<button class="main_bt">Gửi</button>
 							</div>
 						</div>
 					</div>
@@ -430,7 +430,7 @@
 				<div class="col-md-6">
 					<div class="shop_banner">
 						<div class="our_shop">
-							<button class="out_shop_bt">Our Shop</button>
+							<button class="out_shop_bt">Cửa hàng chúng tôi</button>
 						</div>
 					</div>
 				</div>
@@ -474,40 +474,39 @@
 							dolor sit amet,</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
-						<h2 class="shop_text">Address </h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">No 40 Baria Sreet
-								15/2 NewYork City, NY, United States.</span></div>
+						<h2 class="shop_text">Địa chỉ</h2>
+						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
-						<h2 class="shop_text">Our Company </h2>
+						<h2 class="shop_text">Công ty của chúng tôi</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Delivery</li>
+								<li>Giao hàng</li>
 								<li>Legal Notice</li>
-								<li>About us</li>
-								<li>Secure payment</li>
-								<li>Contact us</li>
+								<li>Về chúng tôi</li>
+								<li>Thanh toán an toàn</li>
+								<li>Liên hệ với chúng tôi</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<h2 class="adderess_text">Products</h2>
+						<h2 class="adderess_text">Sản phẩm</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Prices drop</li>
-								<li>New products</li>
-								<li>Best sales</li>
-								<li>Contact us</li>
+								<li>Giảm giá</li>
+								<li>Sản phẩm mới</li>
+								<li>Sản phẩm bán chạy nhất</li>
+								<li>Liên hệ với chúng tôi</li>
 								<li>Sitemap</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<h2 class="adderess_text">Newsletter</h2>
+						<h2 class="adderess_text">Bản tin</h2>
 						<div class="form-group">
-							<input type="text" class="enter_email" placeholder="Enter Your email" name="Name">
+							<input type="text" class="enter_email" placeholder="Nhập email" name="Name">
 						</div>
-						<button class="subscribr_bt">Subscribe</button>
+						<button class="subscribr_bt">Đăng kí</button>
 					</div>
 				</div>
 			</div>
