--- a/blogs/blogOuletGiay-1-top-3-giay-phoi-moi-out-fit.html
+++ b/blogs/blogOuletGiay-1-top-3-giay-phoi-moi-out-fit.html
@@ -53,11 +53,11 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
-								<a class="nav-item nav-link" href="../index.html">Home</a>
-								<a class="nav-item nav-link" href="../collection.html">Collection</a>
-								<a class="nav-item nav-link" href="../shoes.html">Shoes</a>
+								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
+								<a class="nav-item nav-link" href="../collection.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="../contact.html">Contact</a>
+								<a class="nav-item nav-link" href="../contact.html">Liên hệ</a>
 								<a class="nav-item nav-link last" href="#"><img src="../images/search_icon.png"></a>
 								<a class="nav-item nav-link last" href="../contact.html"><img
 										src="../images/shop_icon.png"></a>
